k8s-deployment/java-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  labels:
    app: java-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      # imagePullSecrets:
      # - name: regcred
      containers:
      - name: java-app
        image:  omarriad07/backend:java
        ports:
        - containerPort: 8080 
        
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
