k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app
spec:
  # type: LoadBalancer
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
